--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.12"
+        "zone.js": "0.8.12",
+        "skycoin": "src/cordova"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.12",
@@ -54,7 +55,8 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "skycoin": {}
         },
         "platforms": [
             "android"
