--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@ionic-native/core": "3.12.1",
         "@ionic-native/file": "^3.14.0",
         "@ionic-native/splash-screen": "3.12.1",
+        "@ionic-native/sqlite": "^3.14.0",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
@@ -34,6 +35,7 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-sqlite-storage": "^2.0.4",
         "ionic-angular": "3.5.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -58,8 +60,9 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
+            "cordova-plugin-file": {},
             "skycoin": {},
-            "cordova-plugin-file": {}
+            "cordova-sqlite-storage": {}
         },
         "platforms": [
             "android"
