--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/file": "^3.14.0",
+        "@ionic-native/native-storage": "^3.14.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/sqlite": "^3.14.0",
         "@ionic-native/status-bar": "3.12.1",
@@ -32,6 +33,7 @@
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-file": "^4.3.3",
+        "cordova-plugin-nativestorage": "^2.2.2",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -62,7 +64,8 @@
             "ionic-plugin-keyboard": {},
             "cordova-plugin-file": {},
             "skycoin": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-nativestorage": {}
         },
         "platforms": [
             "android"
