--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@ionic-native/core": "3.12.1",
         "@ionic-native/file": "^3.14.0",
         "@ionic-native/native-storage": "^3.14.0",
+        "@ionic-native/secure-storage": "^4.2.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/sqlite": "^3.14.0",
         "@ionic-native/status-bar": "3.12.1",
@@ -34,6 +35,7 @@
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-nativestorage": "^2.2.2",
+        "cordova-plugin-secure-storage": "^2.6.8",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -47,9 +49,7 @@
         "zone.js": "0.8.12"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "1.3.12",
-        "@ionic/cli-plugin-cordova": "1.4.1",
-        "@ionic/cli-plugin-ionic-angular": "1.3.2",
+        "@ionic/app-scripts": "^1.3.12",
         "typescript": "2.3.4"
     },
     "description": "An Ionic project",
@@ -66,6 +66,7 @@
             "skycoin": {},
             "cordova-sqlite-storage": {},
             "cordova-plugin-nativestorage": {}
+            "cordova-plugin-secure-storage": {}
         },
         "platforms": [
             "android"
