--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/http": "4.1.3",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/clipboard": "^4.2.1",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/file": "^3.14.0",
         "@ionic-native/native-storage": "^3.14.0",
@@ -29,18 +30,16 @@
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
+        "cordova-clipboard": "^1.0.0",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-file": "^4.3.3",
-        "cordova-plugin-nativestorage": "^2.2.2",
         "cordova-plugin-secure-storage": "^2.6.8",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
         "cordova-skycoin-liteclient": "^1.0.4",
-        "cordova-sqlite-storage": "^2.0.4",
         "ionic-angular": "3.5.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -62,11 +61,9 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "cordova-plugin-file": {},
-            "cordova-sqlite-storage": {},
-            "cordova-plugin-nativestorage": {},
             "cordova-plugin-secure-storage": {},
-            "cordova-skycoin-liteclient": {}
+            "cordova-skycoin-liteclient": {},
+            "cordova-clipboard": {}
         },
         "platforms": [
             "android"
