--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
-        "cordova-skycoin-liteclient": "^1.0.4",
+        "cordova-skycoin-liteclient": "^1.0.7",
         "ionic-angular": "3.5.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -62,8 +62,8 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "cordova-plugin-secure-storage": {},
-            "cordova-skycoin-liteclient": {},
-            "cordova-clipboard": {}
+            "cordova-clipboard": {},
+            "cordova-skycoin-liteclient": {}
         },
         "platforms": [
             "android"
