--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "build": "ionic-app-scripts build",
         "lint": "ionic-app-scripts lint",
         "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+        "ionic:serve": "ionic-app-scripts serve",
+        "precommit": "npm run lint",
+        "prepush": "npm run lint"
     },
     "dependencies": {
         "@angular/common": "4.1.3",
@@ -49,6 +51,7 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.12",
+        "husky": "^0.14.3",
         "typescript": "2.3.4"
     },
     "description": "An Ionic project",
