--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
         "lint": "ionic-app-scripts lint",
         "ionic:build": "ionic-app-scripts build",
         "ionic:serve": "ionic-app-scripts serve",
-        "precommit": "npm run lint",
-        "prepush": "npm run lint"
+        "precommit": "npm run lint"
     },
     "dependencies": {
         "@angular/common": "4.1.3",
