--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.12",
         "husky": "^0.14.3",
+        "tslint-config-prettier": "^1.6.0",
         "typescript": "2.3.4"
     },
     "description": "An Ionic project",
