--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve",
-    "precommit": "npm run lint"
+    "test": "karma start ./testing/karma.conf.js"
   },
   "dependencies": {
     "@angular/common": "4.1.3",
@@ -44,13 +42,29 @@
     "ionic-angular": "3.5.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "protractor": "^5.3.0",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.12"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^1.3.12",
+    "@types/jasmine": "^2.8.6",
+    "@types/jasminewd2": "^2.0.3",
+    "angular2-template-loader": "^0.6.2",
+    "html-loader": "^0.5.5",
     "husky": "^0.14.3",
+    "jasmine": "^3.0.0",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.9",
+    "null-loader": "^0.1.1",
+    "ts-loader": "^3.5.0",
+    "ts-node": "^4.1.0",
     "tslint-config-prettier": "^1.6.0",
     "typescript": "2.3.4"
   },
@@ -68,8 +82,6 @@
       "cordova-clipboard": {},
       "cordova-skycoin-liteclient": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": ["android"]
   }
 }
