--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
     "@ionic-native/sqlite": "^3.14.0",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
-    "cordova-android": "^6.2.3",
-    "cordova-clipboard": "^1.0.0",
+    "cordova-android": "6.4.0",
+    "cordova-clipboard": "^1.1.1",
     "cordova-plugin-camera": "^2.4.1",
-    "cordova-plugin-compat": "^1.1.0",
-    "cordova-plugin-console": "^1.0.5",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-secure-storage": "^2.6.8",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.2",
-    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-skycoin-liteclient": "^1.0.7",
     "ionic-angular": "3.5.0",
     "ionic-plugin-keyboard": "^2.2.1",
