--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/core": "3.12.1",
     "@ionic-native/file": "^3.14.0",
     "@ionic-native/native-storage": "^3.14.0",
+    "@ionic-native/qr-scanner": "^4.5.3",
     "@ionic-native/secure-storage": "^4.2.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/sqlite": "^3.14.0",
@@ -36,6 +37,7 @@
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-qrscanner": "^2.5.0",
     "cordova-plugin-secure-storage": "^2.6.8",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.1",
@@ -66,7 +68,8 @@
       "ionic-plugin-keyboard": {},
       "cordova-plugin-secure-storage": {},
       "cordova-clipboard": {},
-      "cordova-skycoin-liteclient": {}
+      "cordova-skycoin-liteclient": {},
+      "cordova-plugin-qrscanner": {}
     },
     "platforms": [
       "android"
