--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
+    "@ionic-native/barcode-scanner": "^4.5.3",
     "@ionic-native/clipboard": "^4.2.1",
     "@ionic-native/core": "3.12.1",
     "@ionic-native/file": "^3.14.0",
     "@ionic-native/native-storage": "^3.14.0",
-    "@ionic-native/qr-scanner": "^4.5.3",
     "@ionic-native/secure-storage": "^4.2.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/sqlite": "^3.14.0",
     "@ionic-native/status-bar": "3.12.1",
+    "@ionic-native/toast": "^4.5.3",
     "@ionic/storage": "2.0.1",
     "cordova-android": "6.4.0",
     "cordova-clipboard": "^1.1.1",
@@ -37,15 +38,16 @@
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-qrscanner": "^2.5.0",
     "cordova-plugin-secure-storage": "^2.6.8",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-toast": "^2.6.0",
     "cordova-skycoin-liteclient": "^1.0.7",
     "ionic-angular": "3.5.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "phonegap-plugin-barcodescanner": "^7.0.2",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.12"
@@ -69,7 +71,8 @@
       "cordova-plugin-secure-storage": {},
       "cordova-clipboard": {},
       "cordova-skycoin-liteclient": {},
-      "cordova-plugin-qrscanner": {}
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-x-toast": {}
     },
     "platforms": [
       "android"
